--- a/sjfnw/static/css/grants.css
+++ b/sjfnw/static/css/grants.css
@@ -1,5 +1,9 @@
 /*---------------------------------- Base -----------------------------------*/
 
+html, body {
+  height: 100%;
+}
+
 header  {
   text-align: center;
   margin-bottom: 20px;
