--- a/sjfnw/static/css/base.css
+++ b/sjfnw/static/css/base.css
@@ -13,16 +13,24 @@ footer, header, menu, nav, section, summary {
   vertical-align: baseline;
 }
 
+ul {
+  padding-left: 20px; /* half of default. prevent bullets from intersecting other els */
+}
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
+button {
+  font-size: inherit;
+}
+
 body {
   line-height: 1.25;
   font-family: Verdana, sans-serif;
-  font-size: .75em;
+  font-size: 14px;
 }
 
 p {
@@ -91,36 +99,93 @@ footer {
   padding: .5em .5em 1em .5em;
 }
 
+/*---------------------------- Rows / columns -------------------------------*/
+
+.row {
+  clear: both;
+  padding: 0;
+  margin: 0;
+}
+
+.row:before, .row:after {
+  content: "";
+  display: table;
+}
+
+.row:after {
+  clear: both;
+}
+
+.row {
+  zoom: 1;
+}
+
+.col {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  float: left;
+  margin: 1% 0 1% 1.6%;
+}
+
+.col:first-child {
+  margin-left: 0;
+}
+
+/* -fixed version doesn't change relative width if screen is small */
+.col-fixed {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  float: left;
+  margin: 1% 0 1% 1.6%;
+}
+
+.col-fixed:first-child {
+  margin-left: 0;
+}
+
+.col-1of2 {
+  width: 49.2%;
+}
+
+.col-1of4 {
+  display: inline-block;
+  width: 23.8%;
+}
+
+.col-2of4 {
+  display: inline-block;
+  width: 49.2%;
+}
+
+.col-3of4 {
+  width: 74.6%;
+}
+
+.col-1of3 {
+  width: 32.26%;
+}
+
+.col-2of3 {
+  width: 66.13%;
+}
+
+.col-1of5 {
+  width: 18.72%;
+}
+
+.col-4of5 {
+  width: 79.68%;
+}
+
+.col-1of6 {
+  width: 15.3%;
+}
+
 /*---------------------------- Generic classes ------------------------------*/
-
-.sixth {
-  display: inline-block;
-  width: 16%;
-}
-
-.third {
-  display: inline-block;
-  width: 32.5%;
-}
-
-.two-thirds {
-  display: inline-block;
-  width: 65%;
-}
-
-.half {
-  display: inline-block;
-  width: 49%;
-}
-
-.fourth {
-  display: inline-block;
-  width: 24%;
-}
-
-.width-75 {
-  width: 75%;
-}
 
 .center {
   margin-left: auto;
@@ -251,3 +316,36 @@ li.error {
   background-color: #f2dede;
   border-color: #ebccd1;
 }
+
+/*----------------------------- Media queries -------------------------------*/
+
+@media (min-width:480px) {
+  .sm-screen-only {
+    display: none;
+  }
+}
+
+@media (max-width:479px) {
+  .lg-screen-only {
+    display: none;
+  }
+
+  .col {
+    margin: 1% 0;
+  }
+
+  .col.col-1of4,
+  .col.col-1of5,
+  .col.col-1of6 {
+    width: 49.2%;
+  }
+
+  .col.col-2of4,
+  .col.col-3of4,
+  .col.col-1of3,
+  .col.col-2of3,
+  .col.col-4of5 {
+    width: 100%;
+  }
+}
+
