--- a/sjfnw/templates/grants/reporting.html
+++ b/sjfnw/templates/grants/reporting.html
@@ -59,22 +59,24 @@
   <div id="help" class="hidden">
     <button title="close" class="close">X</button>
     <h2>Overview</h2>
-    <div class="half v-top">
-      Use reporting for:
-      <ul class="show">
-        <li>Exporting to spreadsheet</li>
-        <li>Complex filtering</li>
-        <li>Viewing specific fields</li>
-      </ul>
-    </div>
-    <div class="half">
-      Use the admin site for:
-      <ul class="show">
-        <li>Reading grant applications</li>
-        <li>Viewing organization info</li>
-        <li>Simple filtering and sorting</li>
-        <li>Editing or updating any fields</li>
-      </ul>
+    <div class="row">
+      <div class="col col-1of2 v-top">
+        Use reporting for:
+        <ul class="show">
+          <li>Exporting to spreadsheet</li>
+          <li>Complex filtering</li>
+          <li>Viewing specific fields</li>
+        </ul>
+      </div>
+      <div class="col col-1of2">
+        Use the admin site for:
+        <ul class="show">
+          <li>Reading grant applications</li>
+          <li>Viewing organization info</li>
+          <li>Simple filtering and sorting</li>
+          <li>Editing or updating any fields</li>
+        </ul>
+      </div>
     </div>
 
     <h2>Report types</h2>
