--- a/sjfnw/templates/fund/includes/footer.html
+++ b/sjfnw/templates/fund/includes/footer.html
@@ -1,8 +1,8 @@
-<footer>
-<div class="fourth">{% if user.member %}<a href="/fund/projects">your projects</a>{% endif %}</div>
-<div class="fourth"><a href="/fund/support">support/FAQ</a></div>
-<div class="half text-right">{% if user.is_authenticated %}{{user.username|truncatechars:"21"}} | <a href="/fund/logout/">logout</a>{% endif %}</div>
-<div class="extra">
-  <a href="http://socialjusticefund.org" target="_blank">socialjusticefund.org</a>
-</div>
+<footer class="row">
+  <div class="col col-1of4">{% if user.member %}<a href="/fund/projects">your projects</a>{% endif %}</div>
+  <div class="col col-1of4"><a href="/fund/support">support/FAQ</a></div>
+  <div class="col col-2of4 text-right">{% if user.is_authenticated %}{{user.username|truncatechars:"21"}} | <a href="/fund/logout/">logout</a>{% endif %}</div>
+  <div class="extra">
+    <a href="http://socialjusticefund.org" target="_blank">socialjusticefund.org</a>
+  </div>
 </footer>
