--- a/sjfnw/templates/grants/yer_form.html
+++ b/sjfnw/templates/grants/yer_form.html
@@ -13,40 +13,34 @@
 
 {% block content %}
 
-<div class="formwrapper">
+<div>
 
   <div class="text-center">
-    <h1>Year-end Report for {{ yer_period }}</h1>
     <h2>{{ award }}</h2>
+    <h2>Year-end Report for {{ yer_period }}</h2>
     {% if user_override %}<h2>Filling out on behalf of {{ org }}</h2>{% endif %}
-    <span class="last_saved" title="The form is automatically saved every 30 seconds">
-      Last saved: <span class="autosaved">{{ draft.modified|date:"F j, g:ia" }}</span>
-    </span>
+    {% include 'grants/includes/last_saved.html' with interval=30 %}
   </div>
-  
+
   {% if form.errors %}
-  <div style="border:2px groove red;padding:0 10px;margin:10px 0;text-align:center;"><!-- TODO css-->
-    <p>Please resolve the errors below and try submitting again.</p>
-  </div>
+  <div class="error-header">Please resolve the errors below and try submitting again.</div>
   {% endif %}
 
   <form id="yer-form" action="" method="POST" accept-charset="UTF-8">
 
-    <div style="margin-top:2em;">
-      {{ form.contact_person.label_tag }}{{ form.contact_person }} {{ form.contact_person.errors }}<br><br>
-      <table>
-        <tr>
-          <td>{{ form.email.errors }}</td>
-          <td>{{ form.phone.errors }}</td>
-          <td>{{ form.website.errors }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.email.label_tag }}{{ form.email }}</td>
-          <td>{{ form.phone.label_tag }}{{ form.phone }}</td>
-         <td>{{ form.website.label_tag }}{{ form.website }}</td>
-       </tr>
-     </table>
+    <div class="row">
+      {{ form.contact_person.label_tag }}{{ form.contact_person }} {{ form.contact_person.errors }}
     </div>
+    <div class="row-sm">
+      <div class="col col-1of3">{{ form.email.errors }}</div>
+      <div class="col col-1of3">{{ form.phone.errors }}</div>
+      <div class="col col-1of3">{{ form.website.errors }}</div>
+    </div>
+    <div class="row">
+     <div class="col col-1of3">{{ form.email.label_tag }}{{ form.email }}</div>
+     <div class="col col-1of3">{{ form.phone.label_tag }}{{ form.phone }}</div>
+     <div class="col col-1of3">{{ form.website.label_tag }}{{ form.website }}</div>
+   </div>
 
     <div class="narrative_q">
       {{ form.summarize_last_year.label_tag }}
@@ -88,37 +82,35 @@
       {{ form.major_changes.errors}}
       {{ form.major_changes }}
     </div>
-    <div class="narrative_q">
+    <div class="row">
       {{ form.total_size.label_tag }}
-      {{ form.total_size.errors}}<br>
+      {{ form.total_size.errors}}
       {{ form.total_size }}
     </div>
-    <div class="narrative_q">
+    <div class="row">
       {{ form.donations_count.label_tag }}
-      {{ form.donations_count.errors}}<br>
+      {{ form.donations_count.errors}}
       {{ form.donations_count }}
-    </div>
-    <div class="narrative_q">
-      {{ form.donations_count_prev.label_tag }}
-      {{ form.donations_count_prev.errors}}<br>
-      {{ form.donations_count_prev }}
+      <div>
+        {{ form.donations_count_prev.label_tag }}
+        {{ form.donations_count_prev.errors}}
+        {{ form.donations_count_prev }}
+      </div>
     </div>
     <div class="narrative_q">
       {{ form.stay_informed.label_tag }}
       {{ form.stay_informed.errors}}
       {{ form.stay_informed }}
-      <table>
-        <tr>
-          <td>{{ form.listserve.label }}: {{ form.listserve }}</td>
-          <td>{{ form.sit_website.label }}: {{ form.sit_website }}</td>
-          <td>{{ form.newsletter.label }}: {{ form.newsletter }}</td>
-        </tr>
-        <tr>
-          <td>{{ form.facebook.label }}: {{ form.facebook }}</td>
-          <td>{{ form.twitter.label }}: {{ form.twitter }}</td>
-          <td>{{ form.other.label }}: {{ form.other }}</td>
-        </tr>
-      </table>
+      <div class="row">
+        <div class="col col-1of3">{{ form.listserve.label }}: {{ form.listserve }}</div>
+        <div class="col col-1of3">{{ form.sit_website.label }}: {{ form.sit_website }}</div>
+        <div class="col col-1of3">{{ form.newsletter.label }}: {{ form.newsletter }}</div>
+      </div>
+      <div class="row">
+        <div class="col col-1of3">{{ form.facebook.label }}: {{ form.facebook }}</div>
+        <div class="col col-1of3">{{ form.twitter.label }}: {{ form.twitter }}</div>
+        <div class="col col-1of3">{{ form.other.label }}: {{ form.other }}</div>
+      </div>
     </div>
     <div class="narrative_q">
       {{ form.other_comments.label_tag }}
@@ -134,104 +126,96 @@
 
   {% autoescape off %}
 
-  <table class="file-uploads">
-    <tr>
-      <td colspan="4">
-        <p>13. {{ form.photo1.help_text }}</p>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2">{{ form.photo1.errors }}</td>
-      <td colspan="2">{{ form.photo3.errors }}</td>
-    </tr>
-    <tr>
-      <td>
-        <form class="files_form" id="photo1_form" action="" target="upload_frame" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
-          1.
-          <span class="file_wrapper">
-            <span class="default-file-input">{{ form.photo1 }}</span>
-            <span class="upload_button">Choose file</span>
-          </span>
-          <input id="photo1_submit" type="submit" value="Submit files" style="display:none;">
-        </form>
-      </td>
-      <td>
-        <span id="photo1_uploaded">{{ file_urls.photo1 }}</span>
-      </td>
-      <td><form class="files_form" id="photo3_form" action="" target="upload_frame" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
-          3. 
-          <span class="file_wrapper">
-            <span class="default-file-input">{{ form.photo3 }}</span>
-            <span class="upload_button">Choose file</span>
-          </span>
-          <input id="photo3_submit" type="submit" value="Submit files" style="display:none;">
-        </form>
-      </td>
-      <td>
-        <span id="photo3_uploaded">{{ file_urls.photo3 }}</span>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2">{{ form.photo2.errors }}</td>
-      <td colspan="2">{{ form.photo4.errors }}</td>
-    </tr>
-    <tr>
-      <td><form class="files_form" id="photo2_form" action="" target="upload_frame" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
-          2.
-          <span class="file_wrapper">
-            <span class="default-file-input">{{ form.photo2 }}</span>
-            <span class="upload_button">Choose file</span>
-          </span>
-          <input id="photo2_submit" type="submit" value="Submit files" style="display:none;">
-        </form>
-      </td>
-      <td>
-        <span id="photo2_uploaded">{{ file_urls.photo2 }}</span>
-      </td>
-      <td><form class="files_form" id="photo4_form" action="" target="upload_frame" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
-          4.
-          <span class="file_wrapper">
-            <span class="default-file-input">{{ form.photo4 }}</span>
-            <span class="upload_button">Choose file</span>
-          </span>
-          <input id="photo4_submit" type="submit" value="Submit files" style="display:none;">
-        </form>
-      </td>
-      <td>
-        <span id="photo4_uploaded">{{ file_urls.photo4 }}</span>
-      </td>
-    </tr>
-    <tr>
-      <td  class="photo-release" colspan="4"><p>{{ form.photo_release.label_tag }}<br>
-        (Download blank photo release: <a href="/static/files/photo-release-english.docx">english</a>,
-        <a href="/static/files/photo-release-spanish.docx">español</a>)</p>
-        {{ form.photo_release.errors }}</td>
-    </tr>
-    <tr>
-      <td>
-          <form class="files_form" id="photo_release_form" action="" target="upload_frame"
-            method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
-          <span class="file_wrapper">
-            <span class="default-file-input">{{ form.photo_release }}</span>
-            <span class="upload_button">Choose file</span>
-          </span>
-          <input id="photo_release_submit" type="submit" value="Submit files" style="display:none;">
-        </form>
-      </td>
-      <td colspan="3">
-        <span id="photo_release_uploaded">{{ file_urls.photo_release }}</span>
-      </td>
-    </tr>
-  </table>
+  <div class="row"><p>13. {{ form.photo1.help_text }}</p></div>
+  <div class="row">
+    <div class="col col-1of2">{{ form.photo1.errors }}</div>
+    <div class="col col-1of2">{{ form.photo3.errors }}</div>
+  </div>
+  <div class="row">
+    <div class="col col-1of4">
+      <form class="files_form" id="photo1_form" action="" target="upload_frame" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
+        1.
+        <span class="file_wrapper">
+          <span class="default-file-input">{{ form.photo1 }}</span>
+          <span class="upload_button">Choose file</span>
+        </span>
+        <input id="photo1_submit" type="submit" value="Submit files" style="display:none;">
+      </form>
+    </div>
+    <div class="col col-1of4">
+      <span id="photo1_uploaded">{{ file_urls.photo1 }}</span>
+    </div>
+    <div class="col col-1of4"><form class="files_form" id="photo3_form" action="" target="upload_frame" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
+        3.
+        <span class="file_wrapper">
+          <span class="default-file-input">{{ form.photo3 }}</span>
+          <span class="upload_button">Choose file</span>
+        </span>
+        <input id="photo3_submit" type="submit" value="Submit files" style="display:none;">
+      </form>
+    </div>
+    <div class="col col-1of4">
+      <span id="photo3_uploaded">{{ file_urls.photo3 }}</span>
+    </div>
+  </div>
+  <div class="row-sm">
+    <div class="col col-1of2">{{ form.photo2.errors }}</div>
+    <div class="col col-1of2">{{ form.photo4.errors }}</div>
+  </div>
+  <div class="row">
+    <div class="col col-1of4"><form class="files_form" id="photo2_form" action="" target="upload_frame" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
+        2.
+        <span class="file_wrapper">
+          <span class="default-file-input">{{ form.photo2 }}</span>
+          <span class="upload_button">Choose file</span>
+        </span>
+        <input id="photo2_submit" type="submit" value="Submit files" style="display:none;">
+      </form>
+    </div>
+    <div class="col col-1of4">
+      <span id="photo2_uploaded">{{ file_urls.photo2 }}</span>
+    </div>
+    <div class="col col-1of4"><form class="files_form" id="photo4_form" action="" target="upload_frame" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
+        4.
+        <span class="file_wrapper">
+          <span class="default-file-input">{{ form.photo4 }}</span>
+          <span class="upload_button">Choose file</span>
+        </span>
+        <input id="photo4_submit" type="submit" value="Submit files" style="display:none;">
+      </form>
+    </div>
+    <div class="col col-1of4">
+      <span id="photo4_uploaded">{{ file_urls.photo4 }}</span>
+    </div>
+  </div>
+  <div class="row">
+    <p>{{ form.photo_release.label_tag }}<br>
+      (Download blank photo release: <a href="/static/files/photo-release-english.docx">english</a>,
+      <a href="/static/files/photo-release-spanish.docx">español</a>)
+    </p>
+    {{ form.photo_release.errors }}
+  </div>
+  <div class="row">
+    <div class="col col-1of4">
+        <form class="files_form" id="photo_release_form" action="" target="upload_frame"
+          method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
+        <span class="file_wrapper">
+          <span class="default-file-input">{{ form.photo_release }}</span>
+          <span class="upload_button">Choose file</span>
+        </span>
+        <input id="photo_release_submit" type="submit" value="Submit files" style="display:none;">
+      </form>
+    </div>
+    <div class="col col-3of4">
+      <span id="photo_release_uploaded">{{ file_urls.photo_release }}</span>
+    </div>
+  </div>
   {% endautoescape %}
 
-	<div align="center">
-		<img class="ajax-loading" src="/static/images/ajaxloader.gif" style="display:none;"><br>
-		<button class="submit" onclick="autoSave.save(true);">Submit</button>
-    <br><br>
-    <span class="last_saved" title="The form is automatically saved every 30 seconds">
-      Draft auto-saved: <span class="autosaved">{{ draft.modified|date:"F j, g:ia" }}</span>
-    </span>
-	</div>
+  <div class="text-center">
+    <img class="ajax-loading" src="/static/images/ajaxloader.gif" style="display:none;"><br>
+    <button class="submit" onclick="autoSave.save(true);">Submit</button>
+    {% include 'grants/includes/last_saved.html' with interval=30 %}
+  </div>
 </div>
 {% endblock content %}
