--- a/sjfnw/templates/grants/base.html
+++ b/sjfnw/templates/grants/base.html
@@ -31,16 +31,16 @@
       </a>
     </header>
 
-    <div class="content_area">
-      {% if messages %}
-        <ul class="messages">
-          {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|safe }}</li>
-          {% endfor %}
-        </ul>
-      {% endif %}
-      {% block content %}{% endblock %}  
-    </div>
+    {# display messages (from django.contrib.messages) if there are any #}
+    {% if messages %}
+      <ul class="messages">
+        {% for message in messages %}
+          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|safe }}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+
+    {% block content %}{% endblock %}
 
     <footer class="row">
       <div class="col col-1of4">
