--- a/sjfnw/templates/grants/includes/continue_to_application.html
+++ b/sjfnw/templates/grants/includes/continue_to_application.html
@@ -1,3 +1,3 @@
 <div class="text-center">
-  <a class="apply-now" href="/apply/{{ cycle.pk }}">Continue to application</a>
+  <a class="apply-now" href="/apply/{{ cycle.pk }}?info=true">Continue to application</a>
 </div>
