show amt note, filter cycles in admin
fix text before files for rapid/seed cycles

--- a/sjfnw/templates/grants/org_app.html
+++ b/sjfnw/templates/grants/org_app.html
@@ -238,9 +238,10 @@ $(document).ready(function() {
 
   <h4>File uploads</h4>
   <p><a href="/apply/info/{{ cycle.pk }}" target="_blank">Download templates here.</a></p>
-  <p>Templates for budgets, funding sources and diversity chart can be downloaded above. For budget documents, you may use your own format if preferred.</p>
 
+  {# TODO hack #}
   {% if cycle.get_type == 'standard' %}
+    <p>Templates for budgets, funding sources and diversity chart can be downloaded above. For budget documents, you may use your own format if preferred.</p>
     <div class="row">1. Budget documents</div>
     {% include 'grants/includes/file_upload.html' with field_id='budget1' %}
     {% include 'grants/includes/file_upload.html' with field_id='budget2' %}
@@ -250,6 +251,7 @@ $(document).ready(function() {
     {% include 'grants/includes/file_upload.html' with field_id='funding_sources' number=3 %}
     {% include 'grants/includes/file_upload.html' with field_id='fiscal_letter' number=4 %}
   {% elif cycle.get_type == 'rapid' %}
+    <p>A template for the diversity chart can be downloaded above.</p>
     {% include 'grants/includes/file_upload.html' with field_id='demographics' number=1 %}
     {% include 'grants/includes/file_upload.html' with field_id='fiscal_letter' number=2 %}
   {% else %}
