fix fiscal field in form, narrative display reading

--- a/sjfnw/templates/grants/org_app.html
+++ b/sjfnw/templates/grants/org_app.html
@@ -213,7 +213,7 @@ $(document).ready(function() {
       {% include row_template with left=form.fiscal_org right=form.fiscal_person %}
       {% include row_template with left=form.fiscal_telephone right=form.fiscal_email %}
       {% include row_template with left=form.fiscal_address right=form.fiscal_city %}
-      {% include row_template with left=form.fiscal_city right=form.fiscal_zip %}
+      {% include row_template with left=form.fiscal_state right=form.fiscal_zip %}
       <div class="row">* Upload fiscal letter at the bottom of the form if applicable.</div>
     </div>
 
