--- a/sjfnw/templates/grants/org_app.html
+++ b/sjfnw/templates/grants/org_app.html
@@ -251,10 +251,11 @@ $(document).ready(function() {
     {% include 'grants/includes/file_upload.html' with field_id='funding_sources' number=3 %}
     {% include 'grants/includes/file_upload.html' with field_id='fiscal_letter' number=4 %}
   {% elif cycle.get_type == 'rapid' %}
-    <p>A template for the diversity chart can be downloaded above.</p>
+    <p>For Rapid Response Grants, please attach a Diversity Chart and a Fiscal Sponsorship letter if your organization has a Fiscal Sponsor. The template for the Diversity Chart can be downloaded above.</p>
     {% include 'grants/includes/file_upload.html' with field_id='demographics' number=1 %}
     {% include 'grants/includes/file_upload.html' with field_id='fiscal_letter' number=2 %}
   {% else %}
+    <p>Please attach a Diversity Chart and a Fiscal Sponsorship letter if your organization has a Fiscal Sponsor.</p>
     {% include 'grants/includes/file_upload.html' with field_id='fiscal_letter' number=1 %}
   {% endif %}
 
