--- a/sjfnw/templates/admin/change_list.html
+++ b/sjfnw/templates/admin/change_list.html
@@ -21,42 +21,32 @@
 {% endblock %}
 
 {% block extrahead %}
-  {{ block.super }}
-  {{ media.js }}
-  {% if action_form %}{% if actions_on_top or actions_on_bottom %}
-  <script type="text/javascript">
-  (function($) {
-      $(document).ready(function($) {
-          $("tr input.action-select").actions();
-      });
-  })(django.jQuery);
-  </script>
-  {% endif %}{% endif %}
-  {# javascript to enable toggling of the filter sidebar #}
-  <script type="text/javascript">
-    (function($) {
-      var filterSidebar;
-      var filterToggle;
+{{ block.super }}
+{{ media.js }}
+{% if action_form %}{% if actions_on_top or actions_on_bottom %}
+<script type="text/javascript">
+(function($) {
+    $(document).ready(function($) {
+        $("tr input.action-select").actions();
+    });
+})(django.jQuery);
+</script>
+{% endif %}{% endif %}
+{% endblock %}
 
-      function toggleFilterSidebar(){
-        filterSidebar.toggle();
-        var toggleArrow = filterToggle.text();
-        toggleArrow = toggleArrow === '▲' ? '▼' : '▲';
-        filterToggle.text(toggleArrow);
-      }
+{% block bodyclass %}{{ block.super }} app-{{ opts.app_label }} model-{{ opts.model_name }} change-list{% endblock %}
 
-      $(document).ready(function() {
-        filterSidebar = $('#changelist-filter');
-        filterToggle = $('#filter-toggle');
-        if (filterSidebar) {
-          $('#filter-header').click(toggleFilterSidebar);
-        } else {
-          console.warning('changelist filter not found');
-        }
-      });
-    })(django.jQuery);
-  </script>
-{% endblock extrahead %}
+{% if not is_popup %}
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+&rsaquo; <a href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ cl.opts.app_config.verbose_name }}</a>
+&rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
+</div>
+{% endblock %}
+{% endif %}
+
+{% block coltype %}flex{% endblock %}
 
 {% block content %}
   <div id="content-main">
@@ -96,12 +86,9 @@
 
       {% block filters %}
         {% if cl.has_filters %}
-          {# wrapper and toggle element for filters #}
-          <div id="changelist-wrapper">
-            <h2 id="filter-header">{% trans 'Filter' %}<span id="filter-toggle">▼</span></h2>
-            <div id="changelist-filter">
+          <div id="changelist-filter">
+            <h2>{% trans 'Filter' %}</h2>
             {% for spec in cl.filter_specs %}{% admin_list_filter cl spec %}{% endfor %}
-            </div>
           </div>
         {% endif %}
       {% endblock %}
